--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,11 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+Include/
+Scripts/
+pyvenv.cfg
+
+
 # Flask stuff:
 instance/
 .webassets-cache
